Fixed card styling to kill white space

--- a/Final Fantasy Search/styles.css
+++ b/Final Fantasy Search/styles.css
@@ -1,5 +1,5 @@
 p {
-    font-size: 22px;
+    font-size: 25px;
     font-family: 'EB Garamond', serif;
 
 }
